ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================

******************************************
CHANGELOG: 19-11-2011 MPB
Move Frsky 10 mS code into frsky.cpp (from drivers.cpp) 
Add audioQueue::frskyevent() in audio.cpp
Make double size decimal point take less space + flash saving
Add frsky alarm options in system menu, these don't change anything yet
Add frsky alarm setting to myeeprom.h
Fix dsm2 reboot problem?
Initialise bandgap and battery values - faster settling of display voltage


******************************************
CHANGELOG: 14-11-2011 RFT
Audio array loop change to save cpu cycle

******************************************
CHANGELOG: 13-11-2011 MPB
Audio array loop fix

******************************************
CHANGELOG: 13-11-2011 MPB
hline and vline memory protection changes


******************************************
CHANGELOG: 13-11-2011 MPB
Fix Curve draw bug caused by fixing EXPO graph


******************************************
CHANGELOG: 13-11-2011 MPB
Fix memory corruption occuring in EXPO graph menu


******************************************
CHANGELOG: 09-11-2011 MPB
Add Amps option to FrSky telemetry A1 and A2.
Add zero function to Amps display.
Clear existing mixes when using simple 4 chan template
Fix delay problem
Fix Reversed throttle with throttle trim bug
Fix getswitch() bug when using !SWn
Change getswitch() to use previous result when recursing deeply

******************************************
CHANGELOG: 03-11-2011
1) update to er9x-builder.sh


******************************************
CHANGELOG: 3-11-2011
1) Moved pulse generation to pulses.cpp and added header file
2) Added support for DSM2


******************************************
CHANGELOG: 02-11-2011